--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
+    "nodemon": "^2.0.21",
     "stripe": "^11.14.0"
   }
 }
