--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,9 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "formik": "^2.2.9",
+    "install": "^0.13.0",
+    "npm": "^9.6.2",
+    "persist": "^0.2.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
@@ -20,14 +23,16 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "^2.1.3",
     "react-stripe-checkout": "^2.6.3",
+    "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4",
     "yarn": "^1.22.19",
     "yup": "^1.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-scripts --openssl-legacy-provider start",
+    "build": "react-scripts --openssl-legacy-provider build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -49,5 +54,4 @@
       "last 1 safari version"
     ]
   }
-
 }
